# Binance_Terminal

./: .coverage  .gitignore  DATA_SYSTEM_SUMMARY.md  LICENSE  PATH_REFACTORING_SUMMARY.md  README.md  build.bat  build_exe.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  tempCodeRunnerFile.py  test_import.py  todo.txt  workspace.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
App/: Main.py
App/settings/: Preferences.txt  fav_coin_example.json  fav_coins.json
app/: Binance_Client.py  Coin_Chart.py  GUI.py  Get_Price.py  Main.py  Order_Func.py  Order_Preferences.txt  Preferences.txt  Price_Update.py  fav_coins.json  tempCodeRunnerFile.py
config/: .env.example  Preferences.txt  fav_coins.json  fav_coins.json.backup  fav_coins_example.json  preferences.example.txt  secure_credentials.example.json  secure_credentials.json
data/analytics/: performance_report_20250822_175700.json
data/portfolio/: latest_portfolio.json  portfolio_2025-08-04.json
data/trades/: trades_2025-08-04.json  trades_2025-08-21.json  trades_2025-08-22.json  trades_2025-08-23.json  trades_2025-08-24.json  trades_2025-09-02.json  trades_2025-09-05.json  trades_2025-09-06.json  trades_2025-09-12.json  trades_2025-09-13.json  trades_2025-09-14.json  trades_2025-09-15.json  trades_2025-09-16.json  trades_2025-09-17.json  trades_2025-09-20.json  trades_2026-01-02.json
docs/: CI_CD_GUIDE.md  CONTRIBUTING.md  MODULE_CACHE_IMPLEMENTATION.md  ORDER_REFACTORING.md  PATHS_MODULE.md
scripts/: build_exe.py  comprehensive_test.py  debug_gui.py  run.py  setup.py  test_data_system.py  test_gui.py
src/: main.py
src/api/: __init__.py  binance_client.py  error_handler.py  http_client.py
src/binance_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: preferences_manager.py  preferences_service.py
src/config/constants/: trading.py
src/core/: config.py  globals.py  logger.py  paths.py  trading_operations.py
src/data/: __init__.py  analytics_service.py  data_manager.py
src/models/: __init__.py  order_types.py
src/services/: __init__.py  account_service.py  analytics_service.py  binance_client.py  client_service.py  data_logger.py  data_manager.py  live_price_service.py  order_service.py  portfolio_tracker.py  preferences_service.py  price_service.py
src/services/account/: __init__.py  account_service.py  wallet_service.py
src/services/client/: __init__.py  client_service.py
src/services/market/: __init__.py  live_price_service.py
src/services/orders/: __init__.py  limit_order_service.py  limit_order_service_backup.py  market_order_service.py  order_service.py  order_type_manager.py
src/ui/: main_window.py
src/ui/components/: __init__.py  base_component.py  chart_widget.py  coin_entry_panel.py  dynamic_coin_panel.py  favorite_coins_panel.py  portfolio_widget.py  safe_button.py  splash_screen.py  terminal_widget.py  wallet_panel.py
src/ui/dialogs/: __init__.py  api_credentials_dialog.py  master_password_dialog.py  security_dialogs.py  settings_dialog.py
src/ui/styles/: __init__.py  button_styles.py  panel_styles.py
src/utils/: __init__.py  data_utils.py  gui_utils.py  math_utils.py  order_utils.py  symbol_utils.py  trading_utils.py
src/utils/data/: __init__.py  config_manager.py  favorites_manager.py  file_operations.py
src/utils/old_files_backup/: data_utils.py  symbol_utils.py  trading_utils.py
src/utils/security/: encryption_manager.py  secure_storage.py
src/utils/symbols/: __init__.py  formatting.py  processing.py  validation.py
src/utils/trading/: __init__.py  operations.py  order_helpers.py  price_operations.py  quantity_calculations.py  symbol_validation.py
tests/: conftest.py  test_smoke.py
tests/integration/: __init__.py  test_api_client.py  test_end_to_end.py
tests/unit/: test_client_service.py  test_data_management.py  test_order_service.py  test_price_service.py  test_trade_execution.py
